[package]
name = "imagine-examples"
license = "MIT"
version = "0.1.0"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"

[[bin]]
name = "basic"
path = "basic.rs"

[[bin]]
name = "calculator"
path = "calculator.rs"

[[bin]]
name = "flex_text"
path = "flex_text.rs"

[dependencies]
imagine = {path = "../imagine"}
imagine_toolkit = {path = "../imagine_toolkit"}
