[package]
name = "imagine"
license = "MIT"
version = "0.1.0"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"

[dependencies]
app_units = "0.7.1"
gleam = "0.6.8"
glutin = "0.19.0"
rusttype = "0.7.3"
specs = "0.14.1"
webrender = {git="https://github.com/servo/webrender/"}
